<resources>
    <string name="app_name">trainingTime</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="language_header">Язык</string>
    <string name="font">Шрифт</string>
    <string name="theme">Тема</string>
    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="language_title">Выберите язык</string>
    <string name="font_title">Выберите размер шрифта</string>
    <string name="theme_title">Выберите тему</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>